
Changelog for 8.0.6

Collector:
    - purge command (on request) for agents with evidence too old

DB:
    - option to create a custom CA for certificates
    - HASP drivers updated to 6.23
    - utility to update the license file
    - ability to change the license file form console
    - console can be installed by accessing: https://db_address/console
    - the filesystem of the agent is not retrieved by default, you have to schedule it
    - fix for the evidence move while moving active targets
    - fix for the status check of the shards