@@ -1,0 +1,10 @@
+#!/usr/bin/env ruby
+$LOAD_PATH.unshift File.join(File.dirname(__FILE__), '..', 'lib')
+
+# ensure the working dir is correct
+Dir.chdir File.dirname(File.dirname(File.realpath(__FILE__)))
+
+require 'bundler/setup'
+require_relative '../lib/rcs-worker'
+
+exit RCS::Worker::StatsManager.run!(*ARGV)
