@@ -78,6 +78,10 @@ module Worker
         ev.data ||= Hash.new
         ev.data[:duration] = 0
 
+        # update the evidence statistics
+        # TODO: where do we add the size to the stats? (probably in the same place where we will forward to connectors)
+        RCS::Worker::StatsManager.instance.add evidence: 1
+
         ev.save
       end
     end
