@@ -7,6 +7,7 @@ Collector:
 DB:
     - option to create a custom CA for certificates
     - HASP drivers updated to 6.23
+    - stats for the worker (rcs-worker-stats)
     - utility to update the license file
     - ability to change the license file form console
     - console can be installed by accessing: https://db_address/console
